--- a/src/app/components/example-page/example-page.component.html
+++ b/src/app/components/example-page/example-page.component.html
@@ -1,9 +1,15 @@
-<button (click)="doButton()">Click Me</button>
 <form [formGroup]="form">
-<advtech-panel  label="Hardcoded Fields">
-    <advtech-text-input advtechWcFormControl formControlName="master" #master label="Master Field"></advtech-text-input>
-    <advtech-text-input advtechWcFormControl formControlName="sync" #sync label="Sync Field" advtechSyncField [parent]="master" [self]="sync" appendTarget='mat-form-field'></advtech-text-input>
-</advtech-panel>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Hardcoded Elements
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <advtech-text-input advtechWcFormControl formControlName="master" #master label="Master Field"></advtech-text-input>
+        <advtech-text-input advtechWcFormControl formControlName="sync" #sync label="Sync Field" advtechSyncField [parent]="master" [self]="sync" appendTarget='mat-form-field'></advtech-text-input>
+    </mat-expansion-panel>
+
+
 </form>
 
 <div #mainColumn></div>
