--- a/src/app/components/example-page/example-page.component.html
+++ b/src/app/components/example-page/example-page.component.html
@@ -1,3 +1,4 @@
+<p style="color: white; padding: 5px;">The 2 fields with sync buttons in the Seo panel are syncing with the Headline field in the Main Details Panel</p>
 <form [formGroup]="form">
     <mat-expansion-panel>
         <mat-expansion-panel-header>
